samples/_failures_safe/1761528201_0435ef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0807bccb.c: In function ‘print_entries_by_level’:
./samples/SAFE/__tmp_0807bccb.c:130:45: error: expected ‘)’ at end of input
  130 |             printf("[%s] %s: %s\n", analyzer
      |                   ~                         ^
      |                                             )
./samples/SAFE/__tmp_0807bccb.c:130:13: error: expected declaration or statement at end of input
  130 |             printf("[%s] %s: %s\n", analyzer
      |             ^~~~~~
./samples/SAFE/__tmp_0807bccb.c:130:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0807bccb.c:130:13: error: expected declaration or statement at end of input
